feat: added backend url

--- a/index.html
+++ b/index.html
@@ -516,9 +516,8 @@
     </div>
 
     <script>
-      // IMPORTANT: Update these values
-      const API_URL = 'http://localhost:5000'
-      const PASSKEY = 'trader2024' // Change this to your desired passkey
+      const API_URL = 'https://trading-bot-backend-vahu.onrender.com'
+      const PASSKEY = 'trader@12345'
 
       // Login handling
       document.getElementById('loginForm').addEventListener('submit', (e) => {
